fixing white spaces on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,6 +371,7 @@ li a:focus {
 	height: 175px;
 	padding-top: 13vh;
 	margin-bottom: 10vh;
+	overflow: hidden;
 }
 
 
